--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,7 @@
         "src": "pig.png",
         "sizes": "512x512",
         "type": "image/png"
-    }]
+    }],
+    "display" : "standalone",
+    "orientation" : "natural"
 }
